--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -65,6 +65,11 @@
 
     .contacts{
        gap: 20px;
+       flex-direction: column;
+    }
+
+    .contacts__link {
+      justify-content: center;
     }
 
    
